# quizbit

./: .gitignore
config/: CMakeLists.txt  build.sh  install_requirements.sh  requirements.txt
docs/: README.md
include/: console.h  db.h  emojis.h  gamecore.h  gamemath.h  global.h  utilities.h
src/: main.c
src/console/: terminal.c
src/core/: account.c  gamecore.c  gamemath.c  gameplay.c  userprofile.c
src/db/: database.c  questions.c
src/utils/: authutil.c  gameutil.c  utilities.c
